feat: add LoggingSagaLifecycleObserver for logging saga lifecycle events refactor: update SagaLockRepository and SagaStepProcessor for improved functionality test: add tests for InMemorySagaEngine and saga lifecycle observer docs: add README and examples for saga usage and configuration